--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,36 @@
-django>=2
-django-crispy-forms>=1.6.0
-django-import-export>=0.5.1
-django-reversion>=2.0.0
+amqp==2.5.2
+billiard==3.6.3.0
+bit-array==0.1.0
+celery==4.4.2
+defusedxml==0.6.0
+diff-match-patch==20181111
+Django==2.2.7
+django-cors-headers==3.3.0
+django-cors-middleware==1.5.0
+django-crispy-forms==1.9.1
 django-formtools==2.1
+django-import-export==2.1.0
+django-reversion==3.0.7
+djangocodemirror==2.1.0
+djangorestframework==3.11.0
+et-xmlfile==1.0.1
 future==0.15.2
 httplib2==0.9.2
+importlib-metadata==1.6.0
+jdcal==1.4.1
+kombu==4.6.8
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.3
+ply==3.11
+PyMySQL==0.9.3
+pytz==2020.1
+PyYAML==5.3.1
 six==1.10.0
+sqlparse==0.3.1
+tablib==2.0.0
+thriftpy==0.3.9
+vine==1.3.0
+xlrd==1.2.0
+xlwt==1.3.0
+zipp==3.1.0
