--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ importlib-metadata==1.6.0
 jdcal==1.4.1
 kombu==4.6.8
 MarkupPy==1.14
+mysqlclient==1.4.6
 odfpy==1.4.1
 openpyxl==3.0.3
 ply==3.11
